--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="refresh" content="0;url={{THE_NEW_URL}}" />
+    <meta http-equiv="refresh" content="0;url=https://restsharp.dev" />
     <link rel="canonical" href="https://restsharp.dev" />
     <title>RestSharp</title>
 </head>
